# icp_transfer

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
common/: clock.hpp  control.hpp  ipc_ring_buffer.hpp  logging.hpp  protocol.hpp  shared_memory.hpp  terminal.hpp
consumer/: cli.hpp  consumer.cpp  consumer.hpp  main.cpp  stats.hpp
include/: control.hpp  crc32c.hpp  ipc_ring_buffer.hpp  logging.hpp  protocol.hpp  ring_buffer.hpp
producer/: cli.hpp  main.cpp  producer.cpp  producer.hpp
scripts/: bench.sh  ci_smoke_test.sh
src/: consumer.cpp  producer.cpp
src/include/common/: backoff.hpp  clock.hpp  ipc_ring_buffer.hpp  protocol.hpp
src/include/consumer/: consumer.hpp  stats.hpp
src/source/consumer/: main.cpp
src/source/producer/: main.cpp  producer.cpp
tests/: ring_selftest.cpp
